fix: add spacing in the text and some styling

--- a/src/components/activity/ActivityListItem.module.scss
+++ b/src/components/activity/ActivityListItem.module.scss
@@ -1,7 +1,10 @@
+@use "../../styles/colors";
+
 .list-item-stack{
     justify-content: flex-start;
     align-items: center;
     padding: 1rem;
+    background-color: colors.$background_paper;
 }
 
 .info-par{
